# claude-code-mcp

./: Cargo.toml  README.md
src/: main.rs  protocol.rs  sessions.rs
tests/: e2e_tests.rs
