[package]
name = "claude-code-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server exposing Claude Code CLI session history"
authors = ["Dan Blevins"]
license = "MIT"

[dependencies]
# MCP protocol over stdio
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "io-std"] }

# File system and path handling
dirs = "5.0"
walkdir = "2.5"
glob = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Fuzzy search for finding sessions
fuzzy-matcher = "0.3"

# Async file IO
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3.16"

[profile.release]
lto = true
codegen-units = 1
strip = true
